--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,28 +1,40 @@
 .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-  }
-  
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+}
+
+.navbar-nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex; 
+  justify-content: space-between; 
+}
+
+.nav-item {
+  margin-right: 20px;
+}
+
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 15px;
+}
+
+.nav-link:hover {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+@media (max-width: 768px) { 
   .navbar-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    flex-direction: column; 
+    align-items: center;
   }
-  
+
   .nav-item {
-    display: inline;
-    margin-right: 20px;
+    margin-right: 0; 
+    margin-bottom: 10px; 
   }
-  
-  .nav-link {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 15px;
-  }
-  
-  .nav-link:hover {
-    color: #fff;
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-  
+}
